pagina con los colores de yael

--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@ La trayectoria profesional y académica de sus socios permite brindar un amplio 
             </div>
             <div class="col-12 col-sm-6 row-footer-brand">
               <div class="text-brand" class="ml-4">
-                <p class="footer-classic-description offset-top-0 offset-right-25">Abogado Javier Schvartzman </p>
-                <p><a style= "color:#313654;" href="https://api.whatsapp.com/send?phone=3516167336&text=Buen%20d%C3%ADa,%20Javier!%20Me%20contacto%20porque%20necesito%20asesor%C3%ADa%20legal" target="_blank">3516167336</a></p>  
-                <p><a style= "color:#313654;" href="mailto:info@jasman.com.ar" target="_blank">mail: info@jasman.com.ar</a></p>  
+                <p class="footer-classic-description offset-top-0 offset-right-25"><span class="name-abo">Abogado Javier Schvartzman</span> </p>
+                <p><a href="https://api.whatsapp.com/send?phone=3516167336&text=Buen%20d%C3%ADa,%20Javier!%20Me%20contacto%20porque%20necesito%20asesor%C3%ADa%20legal" target="_blank">télefono: 3516167336</a></p>  
+                <p><a href="mailto:info@jasman.com.ar" target="_blank">mail: info@jasman.com.ar</a></p>  
               </div>
             </div>
           </div>
