solucionado el problema de que no abria whatsapp

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <li>
                     <div class="unit unit-spacing-xs align-items-center">
                       <div class="unit-left"><span class="icon text-middle fa-whatsapp"></span></div>
-                      <div class="unit-body"><a href="https://api.whatsapp.com/send?phone=3516167336&text=Buen%20d%C3%ADa,%20Javier!%20Me%20contacto%20porque%20necesito%20asesor%C3%ADa%20legal" target="_blank">3516167336</a></div>
+                      <div class="unit-body"><a href="https://api.whatsapp.com/send?phone=+543516167336&text=Buen%20d%C3%ADa,%20Javier!%20Me%20contacto%20porque%20necesito%20asesor%C3%ADa%20legal" target="_blank">3516167336</a></div>
                     </div>
                   </li>
                   <li>
@@ -407,7 +407,7 @@ La trayectoria profesional y académica de sus socios permite brindar un amplio 
             <div class="col-12 col-sm-6 row-footer-brand">
               <div class="text-brand" class="ml-4">
                 <p class="footer-classic-description offset-top-0 offset-right-25"><span class="name-abo">Abogado Javier Schvartzman</span> </p>
-                <p><a href="https://api.whatsapp.com/send?phone=3516167336&text=Buen%20d%C3%ADa,%20Javier!%20Me%20contacto%20porque%20necesito%20asesor%C3%ADa%20legal" target="_blank">télefono: 3516167336</a></p>  
+                <p><a href="https://api.whatsapp.com/send?phone=+543516167336&text=Buen%20d%C3%ADa,%20Javier!%20Me%20contacto%20porque%20necesito%20asesor%C3%ADa%20legal" target="_blank">télefono: 3516167336</a></p>  
                 <p><a href="mailto:info@jasman.com.ar" target="_blank">mail: info@jasman.com.ar</a></p>  
               </div>
             </div>
